--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
 
 <head>
-  <title>Synergic Web Solutions | Web Development</title>
+  <title>Custom Software & Website Development | SynergicWebSolutions</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="SynergicWebSolutions specializes in custom software and website development. We offer full-stack web development, mobile-friendly designs, and scalable software solutions tailored to your business needs." />
+  <meta name="keywords" content="software development, website development, web design, full-stack development, custom software, responsive web design, web application development" />
+  <meta name="robots" content="index, follow" />
+
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
   <!-- Google Fonts -->
@@ -29,7 +33,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="#">SynergicWebSolutions</a>
+      <a class="navbar-brand" href=""><b>SynergicWebSolutions</b></a>
       <button data-mdb-collapse-init class="navbar-toggler" type="button" data-mdb-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
