--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <html>
 
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PK48GZ81HE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PK48GZ81HE');
+</script>
   <title>Custom Software & Website Development | SynergicWebSolutions</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="SynergicWebSolutions specializes in custom software and website development. We offer full-stack web development, mobile-friendly designs, and scalable software solutions tailored to your business needs." />
